Fix #2644 overlapping popup preview image after increasing preview image size (hagalaz) Fix: Button widget child class static instantiation not working Fix: ModalButton instatiation and added ModalButton::close()

--- a/static/less/popover.less
+++ b/static/less/popover.less
@@ -22,8 +22,12 @@
     a {
       color: @info;
     }
+    img {
+      max-width: 100%;
+    }
   }
   .popover-navigation {
     padding: 15px;
   }
 }
+
